--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,39 +2,44 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 🛎️ Checkout repository
-      uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v4
 
-    - name: ⚙️ Set up Python 3.9
-      uses: actions/setup-python@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
         python-version: '3.9'
 
-    - name: 📂 Install dependencies
+    - name: Install deps
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: 🔬 Smoke test import
-      run: |
-        python -c "import app; print('✅ app imported successfully')"
+    - name: Smoke import
+      run: python -c "import app; print('app imported OK')"
 
-    - name: 🧪 Run pytest (if tests folder exists)
-      if: ${{ exists('tests') }}
+    - name: Run pytest if tests folder exists
       run: |
-        pip install pytest
-        pytest --maxfail=1 --disable-warnings -q
+        if [ -d tests ]; then
+          pip install pytest
+          pytest --maxfail=1 --disable-warnings -q
+        else
+          echo 'No tests/ dir, skipping'
+        fi
 
-    - name: 🐳 Build Docker image (if Dockerfile exists)
-      if: ${{ exists('Dockerfile') }}
+    - name: Build Docker image if Dockerfile exists
       run: |
-        docker build -t airbnb-predictor:ci-test .
+        if [ -f Dockerfile ]; then
+          docker build -t airbnb-predictor:ci-test .
+        else
+          echo 'No Dockerfile, skipping'
+        fi
