--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,36 +10,35 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     env:
-      PYTHONPATH: ${{ github.workspace }
+      PYTHONPATH: ${{ github.workspace }}
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.9'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
 
-    - name: Install deps
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
+      - name: Run pytest if tests folder exists
+        run: |
+          if [ -d tests ]; then
+            pip install pytest
+            pytest --maxfail=1 --disable-warnings -q
+          else
+            echo "No tests dir, skipping"
+          fi
 
-     - name: Run pytest if tests folder exists
-      run: |
-        if [ -d tests ]; then
-          pip install pytest
-          PYTHONPATH=$PWD pytest --maxfail=1 --disable-warnings -q
-        else
-          echo 'No tests/ dir, skipping'
-        fi
-
-    - name: Build Docker image if Dockerfile exists
-      run: |
-        if [ -f Dockerfile ]; then
-          docker build -t airbnb-predictor:ci-test .
-        else
-          echo 'No Dockerfile, skipping'
-        fi
+      - name: Build Docker image if Dockerfile exists
+        run: |
+          if [ -f Dockerfile ]; then
+            docker build -t airbnb-predictor:ci-test .
+          else
+            echo "No Dockerfile, skipping"
+          fi
